
IF(UNIX)
    ADD_DEFINITIONS("-O2 -Wall -DJSON_USE_LINUX")
ELSEIF(WIN32)
    ADD_DEFINITIONS(-DWIN32)
    ADD_DEFINITIONS(-D_WINDOWS)
    ADD_DEFINITIONS("/WX- /W3")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI /Od /RTC1 /Gm")
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi /O2")
ENDIF()

FILE(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE HEADS ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.inl)

SOURCE_GROUP(headers FILES ${HEADS})
SOURCE_GROUP(sources FILES ${SOURCES})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    # ${INC_WMGE}
    ${DIR_JSONCPP}/include
)

ADD_LIBRARY(${LIB_JSON} STATIC EXCLUDE_FROM_ALL ${SOURCES} ${HEADS})

SET(LIBRARY_OUTPUT_PATH ${DIR_JSONCPP}/lib)
SET_PROPERTY(TARGET ${LIB_JSON} PROPERTY FOLDER ${LIB_3RD_FOLDER})